--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -83,7 +83,7 @@ jobs:
     - name: Build (wasm32-unknown-unknown)
       run: bazelisk --noworkspace_rc build --noenable_bzlmod --platforms=@rules_rust//rust/platform:wasm //...
 
-    - name: Build (wasm32-wasi)
+    - name: Build (wasm32-wasip1)
       run: bazelisk --noworkspace_rc build --noenable_bzlmod --platforms=@rules_rust//rust/platform:wasi //...
 
     - name: Format (buildifier)
@@ -196,7 +196,7 @@ jobs:
       run: |
         rustup toolchain install stable --component clippy --component rustfmt
         rustup target add wasm32-unknown-unknown
-        rustup target add wasm32-wasi
+        rustup target add wasm32-wasip1
 
     - name: Build (wasm32-unknown-unknown)
       run: cargo build --release --all-targets --target=wasm32-unknown-unknown
@@ -204,11 +204,11 @@ jobs:
     - name: Clippy (wasm32-unknown-unknown)
       run: cargo clippy --release --all-targets --target=wasm32-unknown-unknown
 
-    - name: Build (wasm32-wasi)
-      run: cargo build --release --all-targets --target=wasm32-wasi
+    - name: Build (wasm32-wasip1)
+      run: cargo build --release --all-targets --target=wasm32-wasip1
 
-    - name: Clippy (wasm32-wasi)
-      run: cargo clippy --release --all-targets --target=wasm32-wasi
+    - name: Clippy (wasm32-wasip1)
+      run: cargo clippy --release --all-targets --target=wasm32-wasip1
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
@@ -259,7 +259,7 @@ jobs:
         rustup toolchain install nightly --component clippy --component rustfmt
         rustup default nightly
         rustup target add wasm32-unknown-unknown
-        rustup target add wasm32-wasi
+        rustup target add wasm32-wasip1
 
     - name: Build (wasm32-unknown-unknown)
       run: cargo build --release --all-targets --target=wasm32-unknown-unknown
@@ -267,11 +267,11 @@ jobs:
     - name: Clippy (wasm32-unknown-unknown)
       run: cargo clippy --release --all-targets --target=wasm32-unknown-unknown
 
-    - name: Build (wasm32-wasi)
-      run: cargo build --release --all-targets --target=wasm32-wasi
+    - name: Build (wasm32-wasip1)
+      run: cargo build --release --all-targets --target=wasm32-wasip1
 
-    - name: Clippy (wasm32-wasi)
-      run: cargo clippy --release --all-targets --target=wasm32-wasi
+    - name: Clippy (wasm32-wasip1)
+      run: cargo clippy --release --all-targets --target=wasm32-wasip1
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
@@ -402,13 +402,13 @@ jobs:
     - name: Update Rust
       run: |
         rustup toolchain install stable --component clippy --component rustfmt
-        rustup target add wasm32-wasi
+        rustup target add wasm32-wasip1
 
-    - name: Build (wasm32-wasi)
-      run: cargo build --release --target=wasm32-wasi
+    - name: Build (wasm32-wasip1)
+      run: cargo build --release --target=wasm32-wasip1
 
-    - name: Clippy (wasm32-wasi)
-      run: cargo clippy --release --target=wasm32-wasi
+    - name: Clippy (wasm32-wasip1)
+      run: cargo clippy --release --target=wasm32-wasip1
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
@@ -428,7 +428,7 @@ jobs:
       run: |
         docker run --rm \
           -v $(pwd)/envoy.yaml:/envoy.yaml \
-          -v $(pwd)/target/wasm32-wasi/release:/etc/envoy/proxy-wasm-plugins \
+          -v $(pwd)/target/wasm32-wasip1/release:/etc/envoy/proxy-wasm-plugins \
           envoyproxy/envoy:v1.31-latest \
           --mode validate \
           -c envoy.yaml
@@ -482,8 +482,8 @@ jobs:
     - name: Update Rust
       run: |
         rustup toolchain install nightly --component clippy --component rustfmt
-        rustup +nightly target add wasm32-wasi
         rustup default nightly
+        rustup target add wasm32-wasip1
 
     - name: Change crate type from library to binary
       run: |
@@ -491,11 +491,11 @@ jobs:
         grep -v '^crate-type' Cargo.tmp > Cargo.toml
         mv src/lib.rs src/main.rs
 
-    - name: Build (wasm32-wasi)
-      run: cargo build --release --target=wasm32-wasi
+    - name: Build (wasm32-wasip1)
+      run: cargo build --release --target=wasm32-wasip1
 
-    - name: Clippy (wasm32-wasi)
-      run: cargo clippy --release --target=wasm32-wasi
+    - name: Clippy (wasm32-wasip1)
+      run: cargo clippy --release --target=wasm32-wasip1
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
@@ -515,7 +515,7 @@ jobs:
 
     - name: Rename .wasm to match expected filename
       run: |
-        cd target/wasm32-wasi/release
+        cd target/wasm32-wasip1/release
         for file in $(ls -1 *.wasm); do \
           mv $file $(echo $file | sed 's/-/_/g'); \
         done
@@ -524,7 +524,7 @@ jobs:
       run: |
         docker run --rm \
           -v $(pwd)/envoy.yaml:/envoy.yaml \
-          -v $(pwd)/target/wasm32-wasi/release:/etc/envoy/proxy-wasm-plugins \
+          -v $(pwd)/target/wasm32-wasip1/release:/etc/envoy/proxy-wasm-plugins \
           envoyproxy/envoy:v1.31-latest \
           --mode validate \
           -c envoy.yaml
