Add tests and benchmarks for map (de)serialization.
Cast usize to u32 to allow running them on 64-bit systems.

Signed-off-by: Piotr Sikora <code@piotrsikora.dev>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -148,6 +148,9 @@ jobs:
     - name: Clippy (wasm32-wasi)
       run: cargo clippy --release --all-targets --target=wasm32-wasi
 
+    - name: Test
+      run: cargo test
+
     - name: Format (rustfmt)
       run: cargo fmt -- --check
 
@@ -209,6 +212,9 @@ jobs:
 
     - name: Clippy (wasm32-wasip1)
       run: cargo clippy --release --all-targets --target=wasm32-wasip1
+
+    - name: Test
+      run: cargo test
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
@@ -272,6 +278,12 @@ jobs:
 
     - name: Clippy (wasm32-wasip1)
       run: cargo clippy --release --all-targets --target=wasm32-wasip1
+
+    - name: Test
+      run: cargo test
+
+    - name: Bench
+      run: cargo bench
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
