--- a/bazel/cargo/remote/BUILD.bazel
+++ b/bazel/cargo/remote/BUILD.bazel
@@ -32,6 +32,12 @@ filegroup(
 
 # Workspace Member Dependencies
 alias(
+    name = "bytes",
+    actual = "@crates_vendor__bytes-1.8.0//:bytes",
+    tags = ["manual"],
+)
+
+alias(
     name = "hashbrown",
     actual = "@crates_vendor__hashbrown-0.15.0//:hashbrown",
     tags = ["manual"],
