--- a/bazel/cargo/remote/BUILD.bazel
+++ b/bazel/cargo/remote/BUILD.bazel
@@ -48,3 +48,15 @@ alias(
     actual = "@crates_vendor__proxy-wasm-0.2.3-dev//:proxy_wasm",
     tags = ["manual"],
 )
+
+alias(
+    name = "serde",
+    actual = "@crates_vendor__serde-1.0.214//:serde",
+    tags = ["manual"],
+)
+
+alias(
+    name = "serde_json",
+    actual = "@crates_vendor__serde_json-1.0.132//:serde_json",
+    tags = ["manual"],
+)
