--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -366,6 +366,7 @@ jobs:
         - 'http_config'
         - 'http_headers'
         - 'grpc_auth_random'
+        - 'envoy_filter_metadata'
 
     defaults:
       run:
@@ -447,6 +448,7 @@ jobs:
         - 'http_config'
         - 'http_headers'
         - 'grpc_auth_random'
+        - 'envoy_filter_metadata'
 
     defaults:
       run:
