Add Envoy filter metadata example. (#289)
Signed-off-by: Martijn Swaagman <martijn@swaagman.online>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -384,6 +384,7 @@ jobs:
         - 'http_config'
         - 'http_headers'
         - 'grpc_auth_random'
+        - 'envoy_filter_metadata'
 
     defaults:
       run:
@@ -456,6 +457,7 @@ jobs:
         - 'http_config'
         - 'http_headers'
         - 'grpc_auth_random'
+        - 'envoy_filter_metadata'
 
     defaults:
       run:
