all panics gone
Signed-off-by: Alex Snaps <alex@wcgw.dev>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "proxy-wasm"
 version = "0.2.3-dev"
 authors = ["Piotr Sikora <piotrsikora@google.com>"]
-rust-version = "1.65"
+rust-version = "1.76"
 description = "WebAssembly for Proxies"
 readme = "README.md"
 license = "Apache-2.0"
@@ -20,3 +20,11 @@ opt-level = 3
 codegen-units = 1
 panic = "abort"
 strip = "debuginfo"
+
+[lints.clippy]
+panic = "deny"
+#eventually clean all these up as well
+#unwrap_used = "deny"
+#expect_used = "deny"
+#indexing_slicing = "deny"
+
