--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,8 @@ strip = "debuginfo"
 
 [lints.clippy]
 panic = "deny"
+unwrap_used = "deny"
 #eventually clean all these up as well
-#unwrap_used = "deny"
 #expect_used = "deny"
 #indexing_slicing = "deny"
 
