--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ strip = "debuginfo"
 [lints.clippy]
 panic = "deny"
 unwrap_used = "deny"
+expect_used = "deny"
 #eventually clean all these up as well
-#expect_used = "deny"
 #indexing_slicing = "deny"
 
