--- a/bazel/cargo/remote/BUILD.bazel
+++ b/bazel/cargo/remote/BUILD.bazel
@@ -32,14 +32,32 @@ filegroup(
 
 # Workspace Member Dependencies
 alias(
+    name = "hashbrown-0.15.3",
+    actual = "@crates_vendor__hashbrown-0.15.3//:hashbrown",
+    tags = ["manual"],
+)
+
+alias(
     name = "hashbrown",
     actual = "@crates_vendor__hashbrown-0.15.3//:hashbrown",
     tags = ["manual"],
 )
 
 alias(
+    name = "log-0.4.27",
+    actual = "@crates_vendor__log-0.4.27//:log",
+    tags = ["manual"],
+)
+
+alias(
     name = "log",
     actual = "@crates_vendor__log-0.4.27//:log",
+    tags = ["manual"],
+)
+
+alias(
+    name = "proxy-wasm-0.2.3-dev",
+    actual = "@crates_vendor__proxy-wasm-0.2.3-dev//:proxy_wasm",
     tags = ["manual"],
 )
 
