--- a/bazel/cargo/remote/BUILD.hashbrown-0.15.3.bazel
+++ b/bazel/cargo/remote/BUILD.hashbrown-0.15.3.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "log",
+    name = "hashbrown",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,6 +28,14 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "allocator-api2",
+        "default",
+        "default-hasher",
+        "equivalent",
+        "inline-more",
+        "raw-entry",
+    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -35,7 +43,7 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=log",
+        "crate-name=hashbrown",
         "manual",
         "noclippy",
         "norustfmt",
@@ -77,5 +85,10 @@ rust_library(
         "@rules_rust//rust/platform:x86_64-unknown-none": [],
         "//conditions:default": ["@platforms//:incompatible"],
     }),
-    version = "0.4.22",
+    version = "0.15.3",
+    deps = [
+        "@crates_vendor__allocator-api2-0.2.21//:allocator_api2",
+        "@crates_vendor__equivalent-1.0.2//:equivalent",
+        "@crates_vendor__foldhash-0.1.5//:foldhash",
+    ],
 )
