--- a/bazel/cargo/remote/BUILD.log-0.4.27.bazel
+++ b/bazel/cargo/remote/BUILD.log-0.4.27.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "foldhash",
+    name = "log",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -35,7 +35,7 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=foldhash",
+        "crate-name=log",
         "manual",
         "noclippy",
         "norustfmt",
@@ -77,5 +77,5 @@ rust_library(
         "@rules_rust//rust/platform:x86_64-unknown-none": [],
         "//conditions:default": ["@platforms//:incompatible"],
     }),
-    version = "0.1.4",
+    version = "0.4.27",
 )
