--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -150,6 +150,9 @@ jobs:
     - name: Clippy (wasm32-wasi)
       run: cargo clippy --release --all-targets --target=wasm32-wasi
 
+    - name: Test
+      run: cargo test
+
     - name: Format (rustfmt)
       run: cargo fmt -- --check
 
@@ -211,6 +214,9 @@ jobs:
 
     - name: Clippy (wasm32-wasip1)
       run: cargo clippy --release --all-targets --target=wasm32-wasip1
+
+    - name: Test
+      run: cargo test
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
@@ -274,6 +280,12 @@ jobs:
 
     - name: Clippy (wasm32-wasip1)
       run: cargo clippy --release --all-targets --target=wasm32-wasip1
+
+    - name: Test
+      run: cargo test
+
+    - name: Bench
+      run: cargo bench
 
     - name: Format (rustfmt)
       run: cargo fmt -- --check
