--- a/bazel/cargo/remote/BUILD.bazel
+++ b/bazel/cargo/remote/BUILD.bazel
@@ -56,8 +56,8 @@ alias(
 )
 
 alias(
-    name = "proxy-wasm-0.2.3-dev",
-    actual = "@crates_vendor__proxy-wasm-0.2.3-dev//:proxy_wasm",
+    name = "proxy-wasm-0.2.3",
+    actual = "@crates_vendor__proxy-wasm-0.2.3//:proxy_wasm",
     tags = ["manual"],
 )
 
