Add experimental "no-panic" feature.
When enabled, any "this should never happen" errors in dispatcher
and/or hostcalls will be logged, but the processing will continue
as if nothing happened, instead of panicking and trapping WasmVM.

Note that any execution past the "should have panicked" point
is undefined, since the state of contexts can get out-of-sync
with the host when errors and/or events are being ignored.

Signed-off-by: Piotr Sikora <code@piotrsikora.dev>

--- a/examples/http_auth_random/Cargo.toml
+++ b/examples/http_auth_random/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 log = "0.4"
-proxy-wasm = { path = "../../" }
+proxy-wasm = { path = "../../", features = ["no-panic"] }
 
 [profile.release]
 lto = true
