--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ build = "build.rs"
 hashbrown = "0.15"
 log = "0.4"
 
+[features]
+default = []
+no-panic = []
+
 [profile.release]
 lto = true
 opt-level = 3
