--- a/examples/http_headers/Cargo.toml
+++ b/examples/http_headers/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 log = "0.4"
-proxy-wasm = { path = "../../", features = ["header-value"] }
+proxy-wasm = { path = "../../", features = ["strict-header-value"] }
 
 [profile.release]
 lto = true
