--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ log = "0.4"
 
 [features]
 default = []
-header-value = ["dep:bytes", "dep:http"]
+strict-header-value = ["dep:bytes", "dep:http"]
 
 [profile.release]
 lto = true
