--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ build = "build.rs"
 hashbrown = "0.15"
 log = "0.4"
 
+[dev-dependencies]
+mockalloc = "0.1.2"
+
 [profile.release]
 lto = true
 opt-level = 3
