--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "proxy-wasm"
-version = "0.2.4-dev"
+version = "0.2.4"
 authors = ["Piotr Sikora <piotrsikora@google.com>"]
 rust-version = "1.65"
 description = "WebAssembly for Proxies"
