--- a/bazel/cargo/remote/BUILD.bazel
+++ b/bazel/cargo/remote/BUILD.bazel
@@ -68,13 +68,13 @@ alias(
 )
 
 alias(
-    name = "proxy-wasm-0.2.4-dev",
-    actual = "@crates_vendor__proxy-wasm-0.2.4-dev//:proxy_wasm",
+    name = "proxy-wasm-0.2.4",
+    actual = "@crates_vendor__proxy-wasm-0.2.4//:proxy_wasm",
     tags = ["manual"],
 )
 
 alias(
     name = "proxy-wasm",
-    actual = "@crates_vendor__proxy-wasm-0.2.4-dev//:proxy_wasm",
+    actual = "@crates_vendor__proxy-wasm-0.2.4//:proxy_wasm",
     tags = ["manual"],
 )
