--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -87,8 +87,14 @@ jobs:
     - name: Build (wasm32-unknown-unknown)
       run: bazelisk --noworkspace_rc build --noenable_bzlmod --platforms=@rules_rust//rust/platform:wasm //...
 
+    - name: Build (wasm32-unknown-unknown/bzlmod)
+      run: bazelisk --noworkspace_rc build --enable_bzlmod --platforms=@rules_rust//rust/platform:wasm //...
+
     - name: Build (wasm32-wasip1)
       run: bazelisk --noworkspace_rc build --noenable_bzlmod --platforms=@rules_rust//rust/platform:wasi //...
+
+    - name: Build (wasm32-wasip1/bzlmod)
+      run: bazelisk --noworkspace_rc build --enable_bzlmod --platforms=@rules_rust//rust/platform:wasi //...
 
     - name: Format (buildifier)
       run: |
@@ -98,6 +104,9 @@ jobs:
       run: |
         bazelisk --noworkspace_rc run --noenable_bzlmod //bazel/cargo:crates_vendor
         git diff --exit-code
+
+    - name: Format (MODULE.bazel.lock)
+      run: bazelisk mod deps --lockfile_mode=error
 
   msrv:
     runs-on: ubuntu-24.04
