--- a/examples/tcp_rerouting/Cargo.toml
+++ b/examples/tcp_rerouting/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Proxy-Wasm contributors"]
 description = "Proxy-Wasm plugin example: TCP Rerouting based on source IP"
 license = "Apache-2.0"
 edition = "2021"
+rust-version = "1.65"
 
 [lib]
 crate-type = ["cdylib"]
