Add license header to .proto file and refine MSRV approach
- Add Apache 2.0 license header to set_envoy_filter_state.proto
- Remove rust-version field from tcp_rerouting example Cargo.toml
- Keep explicit dependency pins for proc-macro2 and quote to ensure
  Rust 1.65 compatibility

This approach follows the pattern of other examples (no rust-version)
while ensuring MSRV compatibility through explicit dependency pinning
rather than relying on rust-version, which doesn't prevent Cargo from
selecting incompatible dependency versions.

Signed-off-by: Christof Gerber <christof.gerber1@gmail.com>

--- a/examples/tcp_rerouting/Cargo.toml
+++ b/examples/tcp_rerouting/Cargo.toml
@@ -6,7 +6,6 @@ authors = ["Proxy-Wasm contributors"]
 description = "Proxy-Wasm plugin example: TCP Rerouting based on source IP"
 license = "Apache-2.0"
 edition = "2021"
-rust-version = "1.65"
 
 [lib]
 crate-type = ["cdylib"]
@@ -18,3 +17,6 @@ prost = "0.12"
 
 [build-dependencies]
 prost-build = "0.12"
+# Pin proc-macro2 and quote to versions compatible with Rust 1.65 (MSRV)
+proc-macro2 = "=1.0.92"
+quote = "=1.0.37"
