Rename example to "Envoy TCP Routing"
Rename tcp_rerouting to envoy_tcp_routing to:
- Clearly indicate this is an Envoy-specific example
- Use "routing" instead of "rerouting" for better terminology

Changes:
- Renamed directory: examples/tcp_rerouting → examples/envoy_tcp_routing
- Updated package name: proxy-wasm-example-envoy-tcp-routing
- Updated all references in README.md files
- Updated Docker Compose network name and WASM filename
- Updated Envoy config filter names and WASM path
- Updated .gitignore path

Signed-off-by: Christof Gerber <christof.gerber1@gmail.com>

--- a/examples/envoy_tcp_routing/Cargo.toml
+++ b/examples/envoy_tcp_routing/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 publish = false
-name = "proxy-wasm-example-tcp-rerouting"
+name = "proxy-wasm-example-envoy-tcp-routing"
 version = "0.0.1"
 authors = ["Proxy-Wasm contributors"]
-description = "Proxy-Wasm plugin example: TCP Rerouting based on source IP"
+description = "Proxy-Wasm plugin example: Envoy TCP Routing based on source IP"
 license = "Apache-2.0"
 edition = "2021"
 
