--- a/examples/envoy_tcp_routing/docker-compose.yaml
+++ b/examples/envoy_tcp_routing/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     entrypoint: /usr/local/bin/envoy -c /etc/envoy.yaml -l info --service-cluster proxy
     volumes:
       - ./envoy/envoy.yaml:/etc/envoy.yaml
-      - ./target/wasm32-wasip1/release/proxy_wasm_example_tcp_rerouting.wasm:/etc/tcp_rerouting.wasm
+      - ./target/wasm32-wasip1/release/proxy_wasm_example_envoy_tcp_routing.wasm:/etc/envoy_tcp_routing.wasm
     networks:
       - envoymesh
     ports:
