Switch TCP routing example to wasm32-wasi target and pin MSRV-compatible deps
- Change build target from wasm32-wasip1 to wasm32-wasi for MSRV (1.65) compatibility
- Update docker-compose.yaml to mount wasm32-wasi artifact path
- Pin build dependencies to latest MSRV-compatible versions:
  - prost-build 0.11.9, quote 1.0.41, proc-macro2 1.0 (existing pins)
  - indexmap 2.11.4, home 0.5.5 (pinned transitive deps)
- Update README.md build instructions to reflect new target

The wasm32-wasip1 target is not available in Rust 1.65. By switching to
wasm32-wasi and constraining transitive dependencies that require newer
Rust editions (indexmap 2.12+ needs edition 2024, home 0.5.12+ needs
edition 2024), we ensure the example builds with the project's MSRV.

Signed-off-by: Christof Gerber <christof.gerber1@gmail.com>

--- a/examples/envoy_tcp_routing/Cargo.toml
+++ b/examples/envoy_tcp_routing/Cargo.toml
@@ -13,10 +13,15 @@ crate-type = ["cdylib"]
 [dependencies]
 log = "0.4"
 proxy-wasm = { path = "../../" }
-prost = "0.12"
+# Pin to MSRV-compatible prost release
+prost = "=0.11.9"
 
 [build-dependencies]
-prost-build = "0.12"
-# Pin proc-macro2 and quote to versions compatible with Rust 1.65 (MSRV)
-proc-macro2 = "=1.0.92"
-quote = "=1.0.37"
+# Pin to MSRV (v1.65) compatible releases
+prost-build = "=0.11.9"
+quote = "=1.0.41"
+proc-macro2 = "1.0"
+# Pin transitive dependencies to MSRV (v1.65) versions
+indexmap = "=2.11.4"
+home = "=0.5.5"
+
