Update TCP routing example to use latest dependencies
- Upgrade prost to 0.14 (from 0.11.9)
- Remove MSRV-specific dependency pins (indexmap, home, quote)
- Switch back to wasm32-wasip1 target (now supported in current Rust)
- Update docker-compose.yaml to use wasm32-wasip1 artifact path

This change addresses the cargo outdated CI check failures and aligns
with the maintainer's guidance that examples don't need to be MSRV-compatible.

Signed-off-by: Christof Gerber <christof.gerber1@gmail.com>

--- a/examples/envoy_tcp_routing/Cargo.toml
+++ b/examples/envoy_tcp_routing/Cargo.toml
@@ -13,15 +13,9 @@ crate-type = ["cdylib"]
 [dependencies]
 log = "0.4"
 proxy-wasm = { path = "../../" }
-# Pin to MSRV-compatible prost release
-prost = "=0.11.9"
+prost = "0.14"
 
 [build-dependencies]
-# Pin to MSRV (v1.65) compatible releases
-prost-build = "=0.11.9"
-quote = "=1.0.41"
+prost-build = "0.14"
 proc-macro2 = "1.0"
-# Pin transitive dependencies to MSRV (v1.65) versions
-indexmap = "=2.11.4"
-home = "=0.5.5"
 
