review: update Bazel dependencies.
Signed-off-by: Piotr Sikora <code@piotrsikora.dev>

--- a/bazel/cargo/remote/BUILD.itoa-1.0.17.bazel
+++ b/bazel/cargo/remote/BUILD.itoa-1.0.17.bazel
@@ -17,7 +17,7 @@ cargo_toml_env_vars(
 )
 
 rust_library(
-    name = "http",
+    name = "itoa",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -34,12 +34,8 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-        "std",
-    ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_env_files = [
         ":cargo_toml_env_vars",
     ],
@@ -48,7 +44,7 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=http",
+        "crate-name=itoa",
         "manual",
         "noclippy",
         "norustfmt",
@@ -96,10 +92,5 @@ rust_library(
         "@rules_rust//rust/platform:x86_64-unknown-uefi": [],
         "//conditions:default": ["@platforms//:incompatible"],
     }),
-    version = "1.3.1",
-    deps = [
-        "@crates_vendor__bytes-1.10.1//:bytes",
-        "@crates_vendor__fnv-1.0.7//:fnv",
-        "@crates_vendor__itoa-1.0.15//:itoa",
-    ],
+    version = "1.0.17",
 )
