--- a/bazel/cargo/remote/BUILD.bytes-1.11.0.bazel
+++ b/bazel/cargo/remote/BUILD.bytes-1.11.0.bazel
@@ -17,7 +17,7 @@ cargo_toml_env_vars(
 )
 
 rust_library(
-    name = "fnv",
+    name = "bytes",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -38,8 +38,8 @@ rust_library(
         "default",
         "std",
     ],
-    crate_root = "lib.rs",
-    edition = "2015",
+    crate_root = "src/lib.rs",
+    edition = "2021",
     rustc_env_files = [
         ":cargo_toml_env_vars",
     ],
@@ -48,7 +48,7 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=fnv",
+        "crate-name=bytes",
         "manual",
         "noclippy",
         "norustfmt",
@@ -96,5 +96,5 @@ rust_library(
         "@rules_rust//rust/platform:x86_64-unknown-uefi": [],
         "//conditions:default": ["@platforms//:incompatible"],
     }),
-    version = "1.0.7",
+    version = "1.11.0",
 )
