--- a/bazel/cargo/remote/BUILD.http-1.4.0.bazel
+++ b/bazel/cargo/remote/BUILD.http-1.4.0.bazel
@@ -17,7 +17,7 @@ cargo_toml_env_vars(
 )
 
 rust_library(
-    name = "bytes",
+    name = "http",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -39,7 +39,7 @@ rust_library(
         "std",
     ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_env_files = [
         ":cargo_toml_env_vars",
     ],
@@ -48,7 +48,7 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=bytes",
+        "crate-name=http",
         "manual",
         "noclippy",
         "norustfmt",
@@ -96,5 +96,9 @@ rust_library(
         "@rules_rust//rust/platform:x86_64-unknown-uefi": [],
         "//conditions:default": ["@platforms//:incompatible"],
     }),
-    version = "1.10.1",
+    version = "1.4.0",
+    deps = [
+        "@crates_vendor__bytes-1.11.0//:bytes",
+        "@crates_vendor__itoa-1.0.17//:itoa",
+    ],
 )
