--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -19,10 +19,7 @@ matrix:
     - ubuntu2004_arm64
     - macos
     - macos_arm64
-  bazel:
-    - 7.x
-    - 8.x
-    - 9.*
+  bazel: [7.x, 8.x, 9.x]
 
 tasks:
   verify_targets_wasm:
