Add envoy_tcp_routing example to CI workflow
- Add envoy_tcp_routing to examples and reactors matrix
- Install protobuf compiler for envoy_tcp_routing builds
- Clean generated protobuf files before build to avoid cache issues
- Update Envoy validation to mount example-specific WASM files
- Move envoy.yaml to example root directory
- Add .gitignore for generated protobuf code

Signed-off-by: Christof Gerber <christof.gerber1@gmail.com>

--- a/examples/envoy_tcp_routing/docker-compose.yaml
+++ b/examples/envoy_tcp_routing/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     image: envoyproxy/envoy:v1.34.1
     entrypoint: /usr/local/bin/envoy -c /etc/envoy.yaml -l info --service-cluster proxy
     volumes:
-      - ./envoy/envoy.yaml:/etc/envoy.yaml
+      - ./envoy.yaml:/etc/envoy.yaml
       - ./target/wasm32-wasip1/release/proxy_wasm_example_envoy_tcp_routing.wasm:/etc/envoy_tcp_routing.wasm
     networks:
       - envoymesh
