Fix CI cache issue for envoy_tcp_routing
Clean both src/generated and target directories to force fresh build when cache is restored. This ensures protobuf files are regenerated correctly.

Signed-off-by: Christof Gerber <christof.gerber1@gmail.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -452,7 +452,9 @@ jobs:
 
       - name: Clean generated files
         if: matrix.example == 'envoy_tcp_routing'
-        run: rm -rf src/generated
+        run: |
+          rm -rf src/generated
+          rm -rf target
 
       - name: Build (wasm32-wasip1)
         run: cargo build --release --target=wasm32-wasip1
